feat: Add pageable to getAllPosts()